hphp/test/zend/good/ext/spl/tests/dit_002.php.skipif
<?php
<<__EntryPoint>> function main() {
if (!extension_loaded("spl") || !extension_loaded('reflection') || !defined('GLOB_ERR')) print "skip";
}
