hphp/test/zend/bad/ext/spl/tests/dit_002.php.skipif
<?php if (!extension_loaded("spl") || !extension_loaded('reflection') || !defined('GLOB_ERR')) print "skip"; ?>